Changes to world controller to always activate worlds

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1332,8 +1332,9 @@ modes:
   - world6
   - bonus
   - villagermb
+  - divertercontrol
  # - nighthurryup
  # - night
  # - tools
- # - divertercontrol
+
   
