--- a/modes/world1/config/world1.yaml
+++ b/modes/world1/config/world1.yaml
@@ -10,6 +10,18 @@ show_player:
       loops: -1
       speed: 1
 
+sound_player:
+  world_started:
+    world1mode_music:
+      action: play
+      loops: -1
+      mode_end_action: stop
+  multiball_villagermb_ended:
+    world1mode_music:
+      action: play
+      loops: -1
+      mode_end_action: stop
+      
 variable_player:
   #setup environment variables
   mode_world1_started:  
