--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -55,6 +55,20 @@ multiballs:
 
 #Player Variables
 variable_player:
+  #MULTIBALL MULTIPLIER
+  ball_started:     #RESET ON BALL START
+    multiplier_mb:
+      int: 1
+      action: set
+  multiball_villagermb_started: #VILLAGER MULTIBALL STARTED
+    multiplier_mb:
+      int: 2
+      action: set
+  multiball_villagermb_ended: #VILLAGER MULTIBALL ENDED
+    multiplier_mb:
+      int: 1
+      action: set
+
   spinner_hit:
     score: 1000 * current_player.multiplier_mb
   collectitem1_hit:
@@ -308,7 +322,7 @@ slides:
   base_pincraft_slide:
     priority: 100
     widgets:
-      - type: text        #PLAYER 1 SCORE
+      - type: text        #MULTIBALL MULTIPLIER
         text: MB - (player|multiplier_mb)x
         number_grouping: true
         min_digits: 2
