--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,86 +1,87 @@
 events:
-  game_ended: 32
-  game_started: 190
+  game_ended: 60
+  game_started: 225
 player:
   score:
-    average: 1772278.9473684211
+    average: 1248053.7878787878
     top:
     - 37197000
     - 5638900
     - 4905500
+    - 2706450
+    - 2510050
     - 1782900
     - 1766300
     - 1748700
     - 1481150
     - 1433200
-    - 1120950
-    - 963400
-    total: 38
+    total: 66
 shots:
-  captiveball: 86
-  centertarget: 1192
-  collectitem1: 1752
-  collectitem2: 1654
-  collectitem3: 642
-  collectitem4: 1530
-  collectitem5: 1488
-  leftslingshot: 856
+  captiveball: 130
+  centertarget: 1359
+  collectitem1: 1979
+  collectitem2: 1865
+  collectitem3: 778
+  collectitem4: 1698
+  collectitem5: 1660
+  leftslingshot: 1061
   loopleft: 155
   loopright: 97
-  popbumper1: 716
-  popbumper2: 819
-  popbumper3: 1118
-  rightslingshot: 410
-  skill_scoup: 95
-  spinner: 4218
+  popbumper1: 980
+  popbumper2: 1185
+  popbumper3: 1547
+  rightslingshot: 546
+  skill_scoup: 106
+  spinner: 4767
+  village_jackpot: 14
 switches:
-  s_bumperrail: 214
-  s_captiveball: 86
-  s_centertarget: 1227
-  s_collectitem1: 2517
-  s_collectitem2: 2415
-  s_collectitem3: 870
-  s_collectitem4: 2296
-  s_collectitem5: 2256
+  s_bumperrail: 311
+  s_captiveball: 130
+  s_centertarget: 1394
+  s_collectitem1: 2744
+  s_collectitem2: 2626
+  s_collectitem3: 1006
+  s_collectitem4: 2464
+  s_collectitem5: 2428
   s_credit_right: 0
-  s_drop1: 339
-  s_drop2: 522
-  s_drop3: 1527
-  s_drop4: 326
-  s_drop5: 914
-  s_drop6: 457
-  s_left_flipper: 3766
-  s_leftinlane: 43
-  s_leftoutlane: 119
-  s_leftsling: 856
-  s_loopleft: 285
-  s_loopright: 454
+  s_drop1: 446
+  s_drop2: 694
+  s_drop3: 1986
+  s_drop4: 426
+  s_drop5: 1175
+  s_drop6: 624
+  s_left_flipper: 5458
+  s_leftinlane: 68
+  s_leftoutlane: 149
+  s_leftsling: 1061
+  s_loopleft: 371
+  s_loopright: 603
   s_maint: 0
-  s_plungerlane: 581
-  s_popbumper1: 716
-  s_popbumper2: 819
-  s_popbumper3: 1118
-  s_right_flipper: 3136
+  s_plungerlane: 757
+  s_popbumper1: 980
+  s_popbumper2: 1185
+  s_popbumper3: 1547
+  s_right_flipper: 4558
   s_rightinlane: 0
-  s_rightoutlane: 73
-  s_rightsling: 410
-  s_scoup: 267
-  s_spinner: 4219
-  s_start: 10
+  s_rightoutlane: 89
+  s_rightsling: 546
+  s_scoup: 325
+  s_spinner: 4768
+  s_start: 21
   s_tilt: 0
-  s_tooltarget1: 244
-  s_tooltarget2: 255
-  s_tooltarget3: 156
-  s_topbumperleft: 180
-  s_topbumperright: 310
-  s_topkicker: 922
-  s_trough1: 485
-  s_trough2: 422
-  s_trough3: 411
-  s_trough4: 305
-  s_troughjam: 425
+  s_tooltarget1: 321
+  s_tooltarget2: 328
+  s_tooltarget3: 187
+  s_topbumperleft: 277
+  s_topbumperright: 445
+  s_topkicker: 1210
+  s_trough1: 612
+  s_trough2: 535
+  s_trough3: 523
+  s_trough4: 419
+  s_troughjam: 541
   s_upperdrop: 115
-  s_whitedot1: 81
-  s_whitedot2: 86
-  s_whitedot3: 106
-  s_whitedot4: 117
+  s_whitedot1: 122
+  s_whitedot2: 122
+  s_whitedot3: 163
+  s_whitedot4: 159
